2008-05-02  Hans Breuer  <hans@breuer.org>

	* app/diagram_tree.c : there was a pixmap and mask created for every
	object in the diagram; not only waste of cpu cycles but also a 
	resource problem making Gdk fail for a diagram with >7000 objects.
	Now the type specific pixmap and mask are hold in a hashtable and
	only ref'd for use in the GtkCTree. Also a pixbuf leak was plugged.

	* app/preferences.[hc] app/display.c : antialized view default
	selectable from prefernces, bug #338832

	* plug-ins/dxf/dxf-export.c : the TABLES section was missing the
	TABLE start, should fix bug #528741

	* lib/filter.[hc] : introduce the ability to influence guessing of
	import/export -filters. If one is marked as FILTER_DONT_GUESS it is 
	only selected by the guessing if it is the only one registering a 
	certain extension
	* lib/plug-in.h : increase DIA_PLUGIN_API_VERSION
	* plug-ins/python/diamodule.c : set FILTER_DONT_GUESS for all filters
	implemented in Python
	* plug-ins/pixbuf/pixbuf.c : set FILTER_DONT_GUESS for vector formats
	supported by GdkPixbuf. This way a Dia importer capable to process
	vectors gets preferred

2008-05-01  Hans Breuer  <hans@breuer.org>

	* app/find-and-replace.[hc] : inital version of find&replace - find
	already working, replace does nothing yet (to be continued)
	* app/Makefile.am app/makefile.msc : build find-and-replace.c
	* lib/diagramdata.[hc] : new function data_foreach_object() to simplify
	the iteration over objects
	* lib/libdia.def : export it
	* data/display-ui.xml data/popup-ui.xml app/menus.c : Find&Replace 
	in the menus

	* samples/Self/dia-renderer.dia : updated

2008-04-28  Hans Breuer  <hans@breuer.org>

	* lib/diagdkrenderer.c : another cheap optimization, clip the
	requested sub-pixbuf to the visible area

2008-04-28  Steffen Macke <sdteffen@sdteffen.de>

	* shapes/Cisco/router.png: Standard icon size 22x22; Thanks to
	Ian Redfern

2008-04-27  Hans Breuer  <hans@breuer.org>
